--- a/FrameWork/2.Binder.md
+++ b/FrameWork/2.Binder.md
@@ -17,7 +17,7 @@ Binder是什么
 ### Binder与传统IPC对比
     对比linux进程通信机制：管道、信号量、socket、共享内存
     binder性能 < 共享内存，但是优于其他IPC进程间通信
-
+    
     1.binder只用拷贝一次数据；共享内存不用拷贝；socket需要拷贝两次
     2.binder基于c/s架构，易用性高；共享内存存在数据同步问题，控制复杂，
         易用性差；socket基于c/s架构，但是作为通用接口，传输效率低，开销大
@@ -44,25 +44,25 @@ Binder是什么
         1.分配内存
         2.初始化设备
         3.放入链表 binder——devices
-
+    
     2. binder_open
         1.创建binder_proc对象
         2.当前进程信息保存到proc
         3.filp->private_data = proc;
         4.添加到binder_procs链表中
-
+    
     3. binder_mmap
         1.通过用户空间的虚拟内存大小 --- 分配一块内核的虚拟内存
         2.分配一块物理内存 --- 4KB
         3.把这块物理内存分别映射到 用户空间的虚拟内存和内核的虚拟内存
-
+    
     4. binder_ioctl
         读写操作---BINDER_WRITE_READ---> 
         binder_ioctl_write_read() { 
             copy_from_user() // 从用户空间拷贝到内核
-
+    
             copy_to_user() // 从内核拷贝到用户空间
-
+    
             binder_thread_write()
             binder_thread_read()
         }
@@ -102,7 +102,7 @@ service servicemanager /system/bin/servicemanager
         1.创建binder_node结构体对象
         2.proc -> binder_node
         3.创建work和todo消息队列
-
+    
     3. binder_loop()
     BC_ENTER_LOOPER
         1.写入状态为Loop
@@ -135,3 +135,68 @@ native/libs/binder/IServiceManager.cpp.defaultServiceManager()
 
 
 AIDL
+
+---
+
+# 服务的注册和获取，线程池管理
+    ——从java获取
+
+framework/base/services/java/com/android/server/SystemServer.java
+
+main() -> 
+    SystemServer.run() ->
+        startBootstrapServices() ->
+            AMS -> 反射 -> systemServiceManager.startService() -> Lifecycle -> service.start()
+                -> AMS.setSystemProcess() -> ServiceManager.addService() ->
+                     getIServiceManager().addService(name, service, false)
+
+* getIServiceManager().addService(name, service, false);
+
+    * getIServiceManager() ---> return ServiceManagerProxy(BinderProxy)
+        * ServiceManagerNative.asInterface(BinderInternal.getContextObject())
+            * BinderInternal.getContextObject() -> 调用native return BinderProxy对象
+                * android_util_Binder.cpp
+                * ProcessState::self()->getContextObject:创建一个BpBinder
+                    * javaObjectForIBinder->BinderProxy和BpBinder互相绑定
+            * ServiceManagerNative.asInterface()
+                * return ServiceManagerProxy(BinderProxy)
+
+    * addService()
+
+        * data.writeStrongBinder(service); (service:AMS)  将AMS放入data中
+
+        * mRemote.transact() -> BinderProxy.transact()
+
+            * BpBinder.transact() -> IPCThreadState::transact()
+
+                1. witeTransactionData ---out写入命令 -write -cmd ==BC_TRANSACTION
+
+                2. waitForResponse() --->  talkWithDriver() !重点kernel/drivers/staging/android/binder.c/binder_transaction()
+
+                    1. 获取target_node
+
+                    2. 获取target_proc
+
+                    3. 获取todo, wait
+
+                    4. 创建t，tcomplete
+
+                    5. 拷贝数据
+
+                    6. binder_transaction_binder 转化--> handle
+
+                    7. thread->transaction_stack = t; 方便sm找到客户端
+
+                    8. t->work.type = BINDER_WORK_TRANSACTION; ->给SM 执行
+
+                    9. tcomplete->type = BINDER_WORK_TRANSACTION_COMPLETE;给client挂起
+
+                    10. wake_up_interruptible(target_wait); 唤醒sm
+
+                        
+
+### 总结：
+
+![img](C:\Users\boy\Documents\GitHub\AndroidNotes\res\Binder流程图.PNG)
+
+![img](C:\Users\boy\Documents\GitHub\AndroidNotes\res\addService.PNG)
