--- a/FrameWork/4.增量更新.md
+++ b/FrameWork/4.增量更新.md
@@ -1,24 +1,44 @@
 ### 增量更新
-与热修复区别
-    增量更新是升级版本。
-    热修复是不改变版本号，打补丁包
+>自从 Android 4.1 开始， Google Play 引入了应用程序的增量更新功能，App使用该升级方式，可节省约2/3的流
+量。现在国内主流的应用市场也都支持应用的增量更新。
+增量更新的关键在于增量一词。平时我们的开发过程，往往都是今天在昨天的基础上修改一些代码，app的更新也
+是类似的：往往都是在旧版本的app上进行修改。这样看来，增量更新就是原有app的基础上只更新发生变化的地
+方，其余保持原样。
+与之前每次更新都要下载完整apk包的做法相比，这样做的好处显而易见：每次变化的地方总是比较少，因此更新
+包的体积就会小很多。比某APK的体积在60m左右，如果不采用增量更新，用户每次更新都需要下载大约60m左右
+的安装包，而采用增量更新这种方案之后每次只需要下载2m左右的更新包即可，相比原来做法大大减少了用户下
+载等待的时间和流量，同时也可以因为更新变得更简单也能够缩短产品版本覆盖周期。
 
-作业：实际操作 bsdiff.c  bspatch.c  jni修复过程
+- 与热修复区别
+    > 增量更新是升级版本。
+    > 热修复是不改变版本号，打补丁包
+
+- 使用BSDiff http://www.daemonology.net/bsdiff/
+
+- 作业：实际操作 bsdiff.c  bspatch.c  jni修复过程
 
 ### Dex文件
-- dex文件是Android系统的可执行文件，包含应用程序的全部操作指令以及运行时数据。将原来每个class文件都有的共同信息合成一体，这样减少了class的冗余
+- dex文件是Android系统的可执行文件，包含应用程序的全部操du作指令以及运行时数据。
+当java程序编译成class后，还需要使用dx工具将所有的class文件整合到一个dex文件，目的是其中各个类能够共享
+数据，在一定程度上降低了冗余，同时也是文件结构更加经凑，实验表明，dex文件是传统jar文件大小的50%左
+右。
 
 ###### 学习目的：
 
 - 了解文件格式分析方法，工作中可能遇到需要具体分析某种文件格式或者对接自定义协议，如分析APK格式了解多渠道打包原理、分析资源ARSC格式学习资源混淆原理等。工具[010 Editor](https://www.sweetscape.com/010editor/)
 
 ##### Dex格式
+- 可以使用16进制查看工具打开一个dex来同步分析。(建议使用010Editor)
+> 文件头Header  魔数magic
+> 索引区
+> 数据区
 
-- 文件头Header  魔数magic
-- 索引区
-- 数据区
-
-##### Dex Header解析示例
+- 大小端
+>一般的，文件一般使用小端字节序存储（Dex文件也不例外），网络传输一般使用大端字节序。
+> - 大端模式（Big-endian），是指数据的高字节保存在内存的低地址中，而数据的低字节保存在内存的高地址
+中 。
+> - 小端模式（Little-endian），是指数据的高字节保存在内存的高地址中，而数据的低字节保存在内存的低地址
+中 。
 
 
 
