--- a/FrameWork/5.AMS.md
+++ b/FrameWork/5.AMS.md
@@ -44,10 +44,168 @@ ActivityManagerNative的getDefault方法，可以得到一个ActivityManagerProx
 2. new ActivityManagerService(context, ATMS)创建AMS
 -  创建"android.ui"的线程
 -  创建ActiveServices
--  创建ActivityStackSupervisor对象
+-  创建ActivityStackSupervisor对象 !!最新Android12代码已删除
 
 3. AMS.start()
 - 移除所有的进程组
 - 启动CpuTracker线程
 - 启动电池统计服务
 - 创建LocalService，并添加到LocalServices
+
+# startActivity过程
+### 1. 第一阶段 launch -> AMS
+
+1. frameworks/base/core/java/android/app/Activity.java
+```java
+> startActivity(Intent intent)
+>> startActivity(Intent intent, @Nullable Bundle options)
+>>> startActivityForResult(@RequiresPermission Intent intent, int requestCode, @Nullable Bundle options)
+
+```
+2. frameworks/base/core/java/android/app/Instrumentation.java
+```java
+//至此，开始调用AMS层代码 最新代码增加了ActivityTaskManagerService ATMS，原来直接调用
+public ActivityResult execStartActivity(Context who, IBinder contextThread, IBinder token, Activity target, Intent intent, int requestCode, Bundle options)
+
+// goto  AMS
+ActivityTaskManager.getService().startActivity(whoThread, who.getOpPackageName(), who.getAttributionTag(), intent, intent.resolveTypeIfNeeded(who.getContentResolver()), token, target != null ? target.mEmbeddedID : null, requestCode, 0, null, options);
+```
+
+### 2. 第二阶段 AMS 
+1. frameworks/base/core/java/android/app/IActivityTaskManager.aidl
+```java
+int startActivity(in IApplicationThread caller, in String callingPackage, 
+    in String callingFeatureId, in Intent intent, in String resolvedType, in IBinder resultTo, 
+    in String resultWho, int requestCode, int flags, in ProfilerInfo profilerInfo, in Bundle options);
+```
+
+2. frameworks/base/services/core/java/com/android/server/wm/ActivityTaskManagerService.java
+```java
+public final int startActivity(IApplicationThread caller, String callingPackage,
+            String callingFeatureId, Intent intent, String resolvedType, IBinder resultTo,
+            String resultWho, int requestCode, int startFlags, ProfilerInfo profilerInfo,
+            Bundle bOptions)
+
+//userId = UserHandle.getCallingUserId()
+// validateIncomingUser = true
+startActivityAsUser(IApplicationThread caller, String callingPackage,
+            @Nullable String callingFeatureId, Intent intent, String resolvedType,
+            IBinder resultTo, String resultWho, int requestCode, int startFlags,
+            ProfilerInfo profilerInfo, Bundle bOptions, int userId, boolean validateIncomingUser) 
+
+
+//userId = UserHandle.getCallingUserId()
+// validateIncomingUser = true
+startActivityAsUser(IApplicationThread caller, String callingPackage,
+            @Nullable String callingFeatureId, Intent intent, String resolvedType,
+            IBinder resultTo, String resultWho, int requestCode, int startFlags,
+            ProfilerInfo profilerInfo, Bundle bOptions, int userId, boolean validateIncomingUser) {
+
+                ...
+
+                return getActivityStartController().obtainStarter(intent, "startActivityAsUser")
+                    .setCaller(caller)
+                    .setCallingPackage(callingPackage)
+                    .setCallingFeatureId(callingFeatureId)
+                    .setResolvedType(resolvedType)
+                    .setResultTo(resultTo)
+                    .setResultWho(resultWho)
+                    .setRequestCode(requestCode)
+                    .setStartFlags(startFlags)
+                    .setProfilerInfo(profilerInfo)
+                    .setActivityOptions(bOptions)
+                    .setUserId(userId)
+                    .execute();
+            }
+```
+
+3. frameworks/base/services/core/java/com/android/server/wm/ActivityStartController.java
+```java
+ActivityStarter obtainStarter(Intent intent, String reason) {
+    return mFactory.obtain().setIntent(intent).setReason(reason);
+}
+```
+
+4. frameworks/base/services/core/java/com/android/server/wm/ActivityStarter.java
+```java
+1.
+int execute() {
+
+}
+
+2. 
+startActivityMayWait(IApplicationThread caller, int callingUid,
+            String callingPackage, Intent intent, String resolvedType,
+            IVoiceInteractionSession voiceSession, IVoiceInteractor voiceInteractor,
+            IBinder resultTo, String resultWho, int requestCode, int startFlags,
+            ProfilerInfo profilerInfo, WaitResult outResult,
+            Configuration globalConfig, SafeActivityOptions options, boolean ignoreTargetSecurity,
+            int userId, TaskRecord inTask, String reason,
+            boolean allowPendingRemoteAnimationRegistryLookup)
+
+3.
+private int startActivity(final ActivityRecord r, ActivityRecord sourceRecord,
+                IVoiceInteractionSession voiceSession, IVoiceInteractor voiceInteractor,
+                int startFlags, boolean doResume, ActivityOptions options, TaskRecord inTask,
+                ActivityRecord[] outActivity)
+
+4.
+private int startActivityUnchecked(final ActivityRecord r, ActivityRecord sourceRecord,
+            IVoiceInteractionSession voiceSession, IVoiceInteractor voiceInteractor,
+            int startFlags, boolean doResume, ActivityOptions options, TaskRecord inTask,
+            ActivityRecord[] outActivity)
+
+```
+
+5. frameworks/base/services/core/java/com/android/server/am/ActivityStackSupervisor.java
+```java
+boolean resumeFocusedStackTopActivityLocked(
+            ActivityStack targetStack, ActivityRecord target, ActivityOptions targetOptions)
+```
+
+6. frameworks/base/services/core/java/com/android/server/am/ActivityStack.java
+```java
+1. 
+boolean resumeTopActivityUncheckedLocked(ActivityRecord prev, ActivityOptions options)
+
+2.
+private boolean resumeTopActivityInnerLocked(ActivityRecord prev, ActivityOptions options)
+```
+
+7. frameworks/base/services/core/java/com/android/server/am/ActivityStackSupervisor.java
+```java
+void startSpecificActivityLocked(ActivityRecord r,
+    boolean andResume, boolean checkConfig) {
+
+    //分支，如果进程没有创建
+    //mService = ActivityManagerService
+    mService.startProcessLocked(r.processName, r.info.applicationInfo, true, 0,
+                "activity", r.intent.getComponent(), false, false, true);
+}
+```
+
+- 8. frameworks/base/services/core/java/com/android/server/am/ActivityManagerService.java
+```java
+
+```
+
+- 9. 
+```java
+
+```
+
+
+
+
+# hookActivity启动没有注册的Activity
+
+- hook是什么？
+
+
+
+
+
+
+
+
+
