--- a/FrameWork/5.AMS.md
+++ b/FrameWork/5.AMS.md
@@ -55,14 +55,14 @@ ActivityManagerNative的getDefault方法，可以得到一个ActivityManagerProx
 # startActivity过程
 ### 1. 第一阶段 launch -> AMS
 
-1. frameworks/base/core/java/android/app/Activity.java
+1. Activity.java
 ```java
 > startActivity(Intent intent)
 >> startActivity(Intent intent, @Nullable Bundle options)
 >>> startActivityForResult(@RequiresPermission Intent intent, int requestCode, @Nullable Bundle options)
 
 ```
-2. frameworks/base/core/java/android/app/Instrumentation.java
+2. Instrumentation.java
 ```java
 //至此，开始调用AMS层代码 最新代码增加了ActivityTaskManagerService ATMS，原来直接调用
 public ActivityResult execStartActivity(Context who, IBinder contextThread, IBinder token, Activity target, Intent intent, int requestCode, Bundle options)
@@ -72,14 +72,14 @@ ActivityTaskManager.getService().startActivity(whoThread, who.getOpPackageName()
 ```
 
 ### 2. 第二阶段 AMS 
-1. frameworks/base/core/java/android/app/IActivityTaskManager.aidl
+1. IActivityTaskManager.aidl
 ```java
 int startActivity(in IApplicationThread caller, in String callingPackage, 
     in String callingFeatureId, in Intent intent, in String resolvedType, in IBinder resultTo, 
     in String resultWho, int requestCode, int flags, in ProfilerInfo profilerInfo, in Bundle options);
 ```
 
-2. frameworks/base/services/core/java/com/android/server/wm/ActivityTaskManagerService.java
+2. ActivityTaskManagerService.java
 ```java
 public final int startActivity(IApplicationThread caller, String callingPackage,
             String callingFeatureId, Intent intent, String resolvedType, IBinder resultTo,
@@ -119,14 +119,14 @@ startActivityAsUser(IApplicationThread caller, String callingPackage,
             }
 ```
 
-3. frameworks/base/services/core/java/com/android/server/wm/ActivityStartController.java
+3. ActivityStartController.java
 ```java
 ActivityStarter obtainStarter(Intent intent, String reason) {
     return mFactory.obtain().setIntent(intent).setReason(reason);
 }
 ```
 
-4. frameworks/base/services/core/java/com/android/server/wm/ActivityStarter.java
+4. ActivityStarter.java
 ```java
 1.
 int execute() {
@@ -157,49 +157,156 @@ private int startActivityUnchecked(final ActivityRecord r, ActivityRecord source
 
 ```
 
-5. frameworks/base/services/core/java/com/android/server/am/ActivityStackSupervisor.java
+5. ActivityStackSupervisor.java
 ```java
-boolean resumeFocusedStackTopActivityLocked(
-            ActivityStack targetStack, ActivityRecord target, ActivityOptions targetOptions)
+boolean resumeFocusedStackTopActivityLocked(ActivityStack targetStack, ActivityRecord target, ActivityOptions targetOptions)
 ```
 
-6. frameworks/base/services/core/java/com/android/server/am/ActivityStack.java
+6. ActivityStack.java
 ```java
-1. 
+1.
 boolean resumeTopActivityUncheckedLocked(ActivityRecord prev, ActivityOptions options)
 
 2.
 private boolean resumeTopActivityInnerLocked(ActivityRecord prev, ActivityOptions options)
-```
 
-7. frameworks/base/services/core/java/com/android/server/am/ActivityStackSupervisor.java
-```java
+3.
 void startSpecificActivityLocked(ActivityRecord r,
     boolean andResume, boolean checkConfig) {
+        ...
+    }
 
-    //分支，如果进程没有创建
-    //mService = ActivityManagerService
-    mService.startProcessLocked(r.processName, r.info.applicationInfo, true, 0,
-                "activity", r.intent.getComponent(), false, false, true);
+```
+
+7. 根据app进程是否启动，如果没有启动
+-> AMS.startProcessLocked
+-> AMS.startProcess
+-> Process.start
+-> ZygoteProcess.start
+
+
+
+
+
+
+
+
+
+
+```java
+3.
+final boolean startPausingLocked(boolean userLeaving, boolean uiSleeping,ActivityRecord resuming, boolean pauseImmediately) {
+    
+    ...
+    // 此处进入AMS 获取到ClientLifecycleManager执行scheduleTransaction()
+    mService.getLifecycleManager().scheduleTransaction(prev.app.thread, prev.appToken, PauseActivityItem.obtain(prev.finishing, userLeaving,prev.configChangeFlags, pauseImmediately));
+    ...
 }
 ```
 
-- 8. frameworks/base/services/core/java/com/android/server/am/ActivityManagerService.java
+7. ClientLifecycleManager.java
 ```java
+1.
+void scheduleTransaction(@NonNull IApplicationThread client, @NonNull IBinder activityToken, @NonNull ClientTransactionItem callback) {
+    final ClientTransaction clientTransaction = ClientTransaction.obtain(client, activityToken);
+}
 
+2.
+void scheduleTransaction(ClientTransaction transaction) throws RemoteException {
+    final IApplicationThread client = transaction.getClient();
+    transaction.schedule();
+    if (!(client instanceof Binder)) {
+        transaction.recycle();
+    }
+}
 ```
 
-- 9. 
+8. ClientTransaction.java
 ```java
+1.
+public static ClientTransaction obtain(IApplicationThread client, IBinder activityToken)
 
+2.
+public void schedule() throws RemoteException {
+    // mClient为IApplicationThread  为binder调用，指向ActivityThread.java
+    mClient.scheduleTransaction(this);
+}
+```
+9. ActivityThread.java
+```java
+1. ApplicationThread extends IApplicationThread.Stub
+public void scheduleTransaction(ClientTransaction transaction) throws RemoteException {
+    ActivityThread.this.scheduleTransaction(transaction);//ActivityThread extends ClientTransactionHandle
+}
 ```
 
+10. ClientTransactionHandle.java
+```java
+void scheduleTransaction(ClientTransaction transaction) {
+    transaction.preExecute(this);
+    // 调用AH的H 
+    sendMessage(ActivityThread.H.EXECUTE_TRANSACTION, transaction);
+}
+```
 
+11. ActivityThread.H
+```java
+public void handleMessage(Message msg) {
+    case EXECUTE_TRANSACTION://19
+        final ClientTransaction transaction = (ClientTransaction) msg.obj;
+        mTransactionExecutor.execute(transaction);
+        if (isSystem()) {
+            // Client transactions inside system process are recycled on the client side
+            // instead of ClientLifecycleManager to avoid being cleared before this
+            // message is handled.
+            transaction.recycle();
+        }
+        // TODO(lifecycler): Recycle locally scheduled transactions.
+        break;
+}
+```
+
+12. TransactionExecutor.java
+```java
+1.
+public void execute(ClientTransaction transaction) {
+    final IBinder token = transaction.getActivityToken();
+    log("Start resolving transaction for client: " + mTransactionHandler + ", token: " + token);
+
+    executeCallbacks(transaction);
+
+    executeLifecycleState(transaction);
+    mPendingActions.clear();
+    log("End resolving transaction");
+}
+
+2.
+public void executeCallbacks(ClientTransaction transaction) {
+    ...
+}
+
+3.
+private void cycleToPath(ActivityClientRecord r, int finish,
+        boolean excludeLastState) {
+    final int start = r.getLifecycleState();
+    log("Cycle from: " + start + " to: " + finish + " excludeLastState:" + excludeLastState);
+    final IntArray path = mHelper.getLifecyclePath(start, finish, excludeLastState);
+    performLifecycleSequence(r, path);
+}
+
+4.
+private void performLifecycleSequence(ActivityClientRecord r, IntArray path) {
+    ...
+}
+
+```
+// 源码看吐了，以后有缘再整理
 
 
 # hookActivity启动没有注册的Activity
 
-- hook是什么？
+- hook是什么？ 
+- hook实例
 
 
 
