--- a/FrameWork/6.PKMS.md
+++ b/FrameWork/6.PKMS.md
@@ -1,1 +1,178 @@
 # PackageManagerService
+简称PKMS
+
+### PKMS 是什么
+PKMS 与 AMS 一样，也是Android系统核心服务之一，非常的重要，主要完成以下核
+心功能：
+1. 解析AndroidNanifest.xml清单文件，解析清单文件中的所有节点信息
+2. 扫描.apk文件，安装系统应用，安装本地应用等
+3. 管理本地应用，主要有，安装，卸载，应用信息查询等
+
+### PKMS 概述
+Android系统启动时，会启动（应用程序管理服务器PKMS），此服务负责扫描系统中特定的目录，寻找里面的APK格式的文件，并对这些文件进行解析，然后得到应用程序相关信息，最后完成应用程序的安装
+
+PKMS在安装应用过程中, 会全面解析应用程序的AndroidManifest.xml文件, 来得到Activity, Service, BroadcastReceiver, ContextProvider 等信息, 在结合PKMS服务就可以在OS中正常的使用应用程序了
+
+在Android系统中, 系统启动时由SystemServer启动PKMS服务, 启动该服务后会执行应用程序的安装过程
+
+## 一部曲 - PKMS角色位置：
+PKMS是属于Binder机制的服务端角色，对应的客户端为PackageManager，实体类为ApplicationPackageManager
+
+## 二步曲 - PKMS 启动过程分析：
+SystemServer启动PKMS： 先是在SystemServer.startBootstrapServices()函数中启动PKMS服务，再调用startOtherServices()函数中对dex优化，磁盘管理功能，让PKMS进入systemReady状态
+
+![img](../res/%E4%B8%83%E6%AD%A5%E8%B5%B0.png)
+
+__第一步 到 第四步：__
+startBootstrapServices()首先启动Installer服务，也就是安装器，随后判断当前的设备是否处于加密
+状态，如果是则只是解析核心应用，接着调用PackageManagerService的静态方法main来创建pms对
+象
+__第一步：__ 启动Installer服务
+__第二步：__ 获取设备是否加密(手机设置密码)，如果设备加密了，则只解析"core"应用
+__第三步：__ 调用PKMS main方法初始化PackageManagerService，其中调用PackageManagerService()构造函数创建了PKMS对象
+__第四步：__ 如果设备没有加密，操作它。管理A/B OTA dexopting。
+
+```java
+private void startBootstrapServices() {
+    ...
+    // 第一步：启动Installer
+    // 阻塞等待installd完成启动，以便有机会创建具有适当权限的关键目录，如/data/user。
+    // 我们需要在初始化其他服务之前完成此任务。
+    Installer installer = mSystemServiceManager.startService(Installer.class);
+    mActivityManagerService.setInstaller(installer);
+    ...
+    // 第二步：获取设别是否加密(手机设置密码)，如果设备加密了，则只解析"core"应用，mOnlyCore=true，后面会频繁使用该变量进行条件判断
+    String cryptState = VoldProperties.decrypt().orElse("");
+    if (ENCRYPTING_STATE.equals(cryptState)) {
+        Slog.w(TAG, "Detected encryption in progress - only parsing core apps");
+        mOnlyCore = true;
+    } else if (ENCRYPTED_STATE.equals(cryptState)) {
+        Slog.w(TAG, "Device encrypted - only parsing core apps");
+        mOnlyCore = true;
+    }
+    // 第三步：调用main方法初始化PackageManagerService
+    mPackageManagerService = PackageManagerService.main(mSystemContext,
+            installer,
+            mFactoryTestMode != FactoryTest.FACTORY_TEST_OFF, mOnlyCore);
+    // PKMS是否是第一次启动
+    mFirstBoot = mPackageManagerService.isFirstBoot();
+    // 第四步：如果设备没有加密，操作它。管理A/B OTA dexopting。
+    if (!mOnlyCore) {
+        boolean disableOtaDexopt =
+                SystemProperties.getBoolean("config.disable_otadexopt",
+                        false);
+        OtaDexoptService.main(mSystemContext, mPackageManagerService);
+    }
+    ...
+}
+```
+
+__第五步，第六步，第七步：__
+startOtherServices
+
+__第五步：__ 执行 updatePackagesIfNeeded ，完成dex优化；
+__第六步：__ 执行 performFstrimIfNeeded ，完成磁盘维护；
+__第七步：__ 调用systemReady，准备就绪。
+```java
+private void startOtherServices() {
+    ...
+    if (!mOnlyCore) {
+    ...
+    // 第五步：如果设备没有加密，执行performDexOptUpgrade，完成dex优化；
+    mPackageManagerService.updatePackagesIfNeeded();
+    }
+    ...
+    // 第六步：最终执行performFstrim，完成磁盘维护
+    mPackageManagerService.performFstrimIfNeeded();
+    ...
+    // 第七步：PKMS准备就绪
+    mPackageManagerService.systemReady();
+    ...
+}
+```
+
+__第三步细节：__ PKMS.main()
+main函数主要工作：
+(1) 检查Package编译相关系统属性
+(2) 调用PackageManagerService构造方法
+(3) 启用部分应用服务于多用户场景
+(4) 往ServiceManager中注册”package”和”package_native”。
+```java
+public static PackageManagerService main(Context context, Installer installer, boolean factoryTest, boolean onlyCore) {
+    // (1)检查Package编译相关系统属性
+    PackageManagerServiceCompilerMapping.checkProperties();
+
+    //(2)调用PackageManagerService构造方法, 同学们可以参考【PKMS构造方法】
+    PackageManagerService m = new PackageManagerService(context, installer,
+    factoryTest, onlyCore);
+
+    //(3)启用部分应用服务于多用户场景
+    m.enableSystemUserPackages();
+
+    //(4)往ServiceManager中注册”package”和”package_native”。
+    ServiceManager.addService("package", m);
+    final PackageManagerNative pmn = m.new PackageManagerNative();
+    ServiceManager.addService("package_native", pmn);
+    return m;
+}
+```
+
+__【PKMS构造方法】:__
+PKMS的构造函数中由两个重要的锁(mInstallLock、mPackages):
+- mInstallLock ：用来保护所有安装apk的访问权限，此操作通常涉及繁重的磁盘数据读写等操作，并
+且是单线程操作，故有时候会处理很慢，此锁不会在已经持有mPackages锁的情况下火的，反之，在已经持有mInstallLock锁的情况下，立即获取mPackages是安全的
+
+- mPackages：用来解析内存中所有apk的package信息及相关状态。
+
+和
+> 5个阶段构成，下面会详细的来分析这些内容。
+阶段1：BOOT_PROGRESS_PMS_START
+阶段2：BOOT_PROGRESS_PMS_SYSTEM_SCAN_START
+阶段3：BOOT_PROGRESS_PMS_DATA_SCAN_START
+阶段4：BOOT_PROGRESS_PMS_SCAN_END
+阶段5：BOOT_PROGRESS_PMS_READY
+
+- __阶段1细节：__
+(1) 构造 DisplayMetrics ，保存分辨率等相关信息；
+(2) 创建Installer对象，与installd交互；
+(3) 创建mPermissionManager对象，进行权限管理；
+(4) 构造Settings类，保存安装包信息，清除路径不存在的孤立应用，主要涉及/data/system/目录的
+packages.xml，packages-backup.xml，packages.list，packages-stopped.xml，packages-stoppedbackup.xml等文件。
+(5) 构造PackageDexOptimizer及DexManager类，处理dex优化；
+(6) 创建SystemConfig实例，获取系统配置信息，配置共享lib库；
+(7) 创建PackageManager的handler线程，循环处理外部安装相关消息。
+
+- __阶段2细节：__
+(1) 从init.rc中获取环境变量BOOTCLASSPATH和SYSTEMSERVERCLASSPATH；
+(2) 对于旧版本升级的情况，将安装时获取权限变更为运行时申请权限；
+(3) 扫描system/vendor/product/odm/oem等目录的priv-app、app、overlay包；
+(4) 清除安装时临时文件以及其他不必要的信息。
+
+- __阶段3细节：__
+对于不仅仅解析核心应用的情况下，还处理data目录的应用信息，及时更新，祛除不必要的数据。
+
+- __阶段4细节：__
+(1) sdk版本变更，更新权限；
+(2) OTA升级后首次启动，清除不必要的缓存数据；
+(3) 权限等默认项更新完后，清理相关数据；
+(4) 更新package.xml
+
+- __阶段5细节：__
+GC回收内存 和一些细节
+
+## 三部曲 - APK的扫描：
+- 第一步：扫描APK，解析AndroidManifest.xml文件，得到清单文件各个标签内容
+- 第二步：解析清单文件到的信息由 Package 保存。从该类的成员变量可看出，和 Android 四大组件相关
+的信息分别由 activites、receivers、providers、services 保存，由于一个 APK 可声明多个组件，因此
+activites 和 receivers等均声明为 ArrayList
+
+## 四部曲 - APK的安装：
+- 安装步骤一: 把Apk的信息通过IO流的形式写入到PackageInstaller.Session中
+- 安装步骤二: 调用PackageInstaller.Session的commit方法, 把Apk的信息交给PKMS处理
+- 安装步骤三: 进行Apk的Copy操作, 进行安装
+
+__总结：__ 安装的原理：
+![img](../res/%E5%AE%89%E8%A3%85%E5%8E%9F%E7%90%86.png)
+
+
+- 详情见[pdf](../res/PKMS%20Android10.0.pdf)
