--- a/FrameWork/7.WMS.md
+++ b/FrameWork/7.WMS.md
@@ -1,28 +1,29 @@
 # WMS WindowManagerService
 
-    WMS控制所有Window的显示隐藏和显示位置
+- WMS控制所有Window的显示隐藏和显示位置，是Framework层的窗口管理服务，职责是管理Android系统中的所有的Window。窗口管理服务，继承IWindowManager.Stub，Binder服务端，因此WM与WMS的交互也是一个IPC的过程
 
-    WindowManager
-
+WindowManager
+- 应用与窗口管理服务WindowManagerService交互的接口
     Token
 
-    Window
-        UI view ->抽象 Window层
+Window 
+- 手机上一块显示区域，添加一个Window的过程，也就是申请分配一块Surface的过程
 
 WMS层级
 app  ---  WMS  ---  SurfaceFlinger
 client   server
 
 WMS的初始化：
-    不同的线程  displayThread
-                ui
-                system_server
+- 涉及到不同的线程  displayThread ui system_server
 
     runWithScissors() 同步方法，阻塞当前线程
 
     构造方法
 
-    重要变量  mTokenMap 
+
+
+
+重要变量  mTokenMap
           mWindowMap
           mSessions
 
