--- a/05性能优化/2.内存优化.md
+++ b/05性能优化/2.内存优化.md
@@ -8,6 +8,11 @@
 由一个Eden区和两个Survivor区组成，程序中生成的大部分新的对象都在Eden区中，当Eden区满时， 还存活的对象将被复制到其中一个Survivor区，当次Survivor区满时，此区存活的对象又被复制到另一 个Survivor区，当这个Survivor区也满时，会将其中存活的对象复制到年老代。
 2、Old Generation 一般情况下，年老代中的对象生命周期都比较长。 3、Permanent Generation 用于存放静态的类和方法，持久代对垃圾回收没有显著影响。
 
+- Android内存三大问题
+    > 1. 内存抖动
+    > 2. 内存泄漏
+    > 3. 内存溢出
+
 - GC三种算法
     > 标记清除算法：两遍扫描，第一遍标记好，第二遍回收。位置不连续，容易产生内存碎片，效率略低。
     
@@ -29,6 +34,12 @@
 - Android内存泄漏分析工具
 
         MAT
+            incoming references
+            outgoing references
+
+            Shallow Heap
+            Retained Heap
+
         
         Android Studio Memory-profiler
         
@@ -64,3 +75,66 @@ vmstat
 WebView都存在内存泄漏的问题，在应用中只要使用一次WebView，内存就不会被释放掉。我们可以为 WebView开启一个独立的进程，使用AIDL与应用的主进程进行通信，WebView所在的进程可以根据业 务的需要选择合适的时机进行销毁，达到正常释放内存的目的。
 
 9. 使用ListView时造成的内存泄漏 在构造Adapter时，使用缓存的convertView。
+
+
+### Bitmap
+- BitmapFactory.Options 参数类
+    - inJustDecodeBounds  如果设置为 true ，不获取图片，不分配内存，但会 返回图片的高度宽度信息。如果将这个值置为 true ，那么在解码的时候将不会返回 ，只 会返回这个 的尺寸。这个属性的目的是，如果你只想知道一个 的尺寸，但又不想
+将其加载到内存时。这是一个非常有用的属性。
+    - inPreferredConfig 设置解码器，这个值是设置色彩模式，默认值是ARGB_8888，在这个模式下，一个像素点占用4bytes空间，一般对透明度不做要求的话，一般采用RGB_565模式，这个模式下一个像素点占用2bytes
+    - inSampleSize 图片缩放的倍数， 这个值是一个 int，当它小于1的时候，将会被当做1处理，如果大于1，那么就会按照比例(1/inSampleSize)缩小bitmap的宽和高、降低分辨率，大于1时这个值将会被处置为2的倍数。例如，width=100,height=100,inSampleSize=2，那么就会将bitmap处理为,width=50,height=50，宽高降为1 / 2，像素数降为1 / 4。
+
+- Bitmap | Drawable | InputStream | Byte[ ] 之间进行转换
+
+//TODO Bitmap更多详细功能学习应用
+### LeakCanery
+- 使用方法
+```
+dependencies {
+  // debugImplementation because LeakCanary should only run in debug builds.
+  debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+}
+```
+
+- 原理
+    利用ReferenceQueue监测WeakReference里的对象是否被回收
+```java
+public class WeakReferenceTest {
+    /**
+     *  WeakReference和ReferenceQueue联合使用案例
+     *  也是用来监控某个对象是否被gc回收的手段
+     * @param args
+     */
+    public static void main(String[] args) {
+        System.out.println("hello world");
+
+        ReferenceQueue referenceQueue = new ReferenceQueue();
+
+        Object obj = new Object();
+
+        //把obj放入weakReference，并和一个referenceQueue关联
+        //当obj被gc回收后，盛放它的weakReference会被添加与之关联的referenceQueue
+        WeakReference weakReference = new WeakReference(obj,referenceQueue);
+        System.out.println("盛放obj的weakReference = " + weakReference);
+
+        //把obj置空，让它没有强引用
+        obj = null;
+
+        Runtime.getRuntime().gc();//gc，让可以回收的对象回收
+
+        try{
+            Thread.sleep(1000);
+        }catch (Exception e){}
+
+        Reference findRef = null;
+
+        do{
+            findRef = referenceQueue.poll();
+            //如果能找到上面的weakReference => 说明它盛放的obj被gc回收了
+            System.out.println("findRef = " +findRef + "是否等于上面的weakReference = " + (findRef == weakReference));
+        }while(findRef !=null);//把所有放到referenceQueue的引用容器找出来
+
+    }
+}
+```
+
