--- a/05性能优化/3.启动速度优化.md
+++ b/05性能优化/3.启动速度优化.md
@@ -1,6 +1,23 @@
 # 3.启动速度优化
 
 ### 1.启动流程 
+
+①点击桌面App图标，Launcher进程采用Binder IPC向system_server进程发起startActivity请求；
+
+②system_server进程接收到请求后，向zygote进程发送创建进程的请求；
+
+③Zygote进程fork出新的子进程，即App进程；
+
+④App进程，通过Binder IPC向sytem_server进程发起attachApplication请求；
+
+⑤system_server进程在收到请求后，进行一系列准备工作后，再通过binder IPC向App进程发送scheduleLaunchActivity请求；
+
+⑥App进程的binder线程（ApplicationThread）在收到请求后，通过handler向主线程发送LAUNCH_ACTIVITY消息；
+
+⑦主线程在收到Message后，通过反射机制创建目标Activity，并回调Activity.onCreate()等方法。
+
+⑧到此，App便正式启动，开始进入Activity生命周期，执行完onCreate/onStart/onResume方法，UI渲染结束后便可以看到App的主界面。
+
 - 开始：点击桌面的app图标，
 - 结束：进程main()方法执行直到可操作状态，也就是MainActivity的onWindowFocusChanged()方法
 
@@ -66,6 +83,28 @@ public class MyApplication extends Application {
 }
 ```
 
-#### 5.总结
+#### 5.启动优化相关总结
+
+1. 合理的使用异步初始化、延迟初始化、懒加载机制。
+
+2. 启动过程避免耗时操作，如数据库 I/O操作不要放在主线程执行。
+
+3. 类加载优化：提前异步执行类加载。
+
+4. 合理使用IdleHandler进行延迟初始化。
+
+5. 简化布局
+
+
+```java
+// 异步初始化案例：
+new AsyncLayoutInflater(this).inflate(R.layout.activity_main, null,
+    new AsyncLayoutInflater.OnInflateFinishedListener() {
+    @Override
+    public void onInflateFinished(@NonNull View view,  int resid, @Nullable ViewGroup parent) {
+        setContentView(view);
+    }
+});
+```
 
 启动速度优化也会涉及到布局优化与卡顿优化，包括内存抖动等问题。优化是一条持续的道路，很多时候我们会发现通过各种检测手段花费了大量的精力去对代码进行修改得到的优化效果可能并不理想。因为优化就是一点一滴积累下来的，我们平时在编码的过程中就需要多注意自己的代码性能。可能实际过程中优化并不会很顺利，不同的设备上可能表现不一样。我们只能结合对业务、对自己代码的了解去不断去实践。
