启动速度优化

--- a/05性能优化/3.启动速度优化.md
+++ b/05性能优化/3.启动速度优化.md
@@ -108,3 +108,49 @@ new AsyncLayoutInflater(this).inflate(R.layout.activity_main, null,
 ```
 
 启动速度优化也会涉及到布局优化与卡顿优化，包括内存抖动等问题。优化是一条持续的道路，很多时候我们会发现通过各种检测手段花费了大量的精力去对代码进行修改得到的优化效果可能并不理想。因为优化就是一点一滴积累下来的，我们平时在编码的过程中就需要多注意自己的代码性能。可能实际过程中优化并不会很顺利，不同的设备上可能表现不一样。我们只能结合对业务、对自己代码的了解去不断去实践。
+
+
+
+### 6.卡顿分析
+
+Systrace
+
+- 使用sdk工具
+python systrace.py -t 5 -o F:\Lance\optimizer\lsn2_jank\a.html gfx input view am dalvik sched wm disk  res -a com.enjoy.example
+
+- Trace API
+
+App层面监控卡顿
+
+若需要准确分析卡顿发生在什么函数，
+资源占用情况如何，目前业界两种主流有效的app监控方式如下: 
+1. 利用UI线程的Looper打印的日志匹配(其实这种方式也就是 BlockCanary 原理)
+2. 使用Choreographer.FrameCallback
+
+### 7.布局优化
+#### 层级优化
+- Layout Inspector工具
+
+- 使用merge标签
+
+- 使用ViewStub标签
+
+#### 过度渲染
+过度绘制是指系统在渲染单个帧的过程中多次在屏幕上绘制某一个像素。例如，如果我们有若干界面卡片堆叠在一起，每张卡片都会遮盖其下面一张卡片的部分内容。但是，系统仍然需要绘制堆叠中的卡片被遮盖的部分。
+
+- GPU 过度绘制检查 
+
+    手机开发者选项中能够显示过度渲染检查功能，通过对界面进行彩色编码来帮我们识别过度绘制。开启步骤如下:
+    1. 进入开发者选项 (Developer Options)。
+    2. 找到调试 GPU 过度绘制(Debug GPU overdraw)。
+    3. 在弹出的对话框中，选择显示过度绘制区域(Show overdraw areas)。
+
+- 解决过度绘制问题
+
+可以采取以下几种策略来减少甚至消除过度绘制:
+- 移除布局中不需要的背景。
+- 使视图层次结构扁平化。
+- 降低透明度。
+
+
+
