--- a/05性能优化/6.apk瘦身.md
+++ b/05性能优化/6.apk瘦身.md
@@ -1,9 +1,8 @@
 # 6.apk瘦身优化
-随着业务迭代，apk体积逐渐变大。项目中积累的无用资源，未压缩的图片资源等，都为apk带来了不必要的体积
-增加。而APK 的大小会影响应用加载速度、使用的内存量以及消耗的电量。
+随着业务迭代，apk体积逐渐变大。项目中积累的无用资源，未压缩的图片资源等，都为apk带来了不必要的体积增加。而APK 的大小会影响应用加载速度、使用的内存量以及消耗的电量。
 
 ## 1. apk结构
-APK 文件由一个 Zip 压缩文件组成，其中包含 构成应用的所有文件。这些文件包括 Java 类文件、资源文件和包含已编译资源的文件。
+APK 文件由一个Zip压缩文件组成，其中包含构成应用的所有文件。这>些文件包括 Java 类文件、资源文件和包含已编译资源的文件。
 
 APK 包含以下目录:
 - META-INF/ :包含 CERT.SF 和 CERT.RSA 签名文件，以及 MANIFEST.MF 清单文件。
@@ -125,6 +124,7 @@ splits {
 ---
 
 ## 5.其他
+
 - 使用精简版本的依赖:如protobuf-lite版本;对于分模块的库按需引入:如netty分模块引入;
 
 - 主动移除无用代码(开启R8/Progurad自动移除);
@@ -134,3 +134,53 @@ splits {
 - 支付宝删除Dex debugItem https://juejin.im/post/6844903712201277448
 - 对于发布Google paly的应用选择使用:AAB https://developer.android.google.cn/guide/app-bundle
 - 图片转webp压缩
+
+
+| Syntax      | Description |
+| ----------- | ----------- |
+| Header      | Title       |
+| Paragraph   | Text        |
+
+| Syntax      | Description | Test Text     |
+| :---        |    :----:   |          ---: |
+| Header      | Title       | Here's this   |
+| Paragraph   | Text        | And more      |
+
+- [x] Write the press release
+- [ ] Update the website
+- [ ] Contact the media
+
+行内公式使用方法，比如这个化学公式：$\ce{Hg^2+ ->[I-] HgI2 ->[I-] [Hg^{II}I4]^2-}$
+
+块公式使用方法如下：
+
+$$H(D_2) = -\left(\frac{2}{4}\log_2 \frac{2}{4} + \frac{2}{4}\log_2 \frac{2}{4}\right) = 1$$
+
+矩阵：
+
+$$
+\begin{pmatrix}
+  1 & a_1 & a_1^2 & \cdots & a_1^n \\
+  1 & a_2 & a_2^2 & \cdots & a_2^n \\
+  \vdots & \vdots & \vdots & \ddots & \vdots \\
+  1 & a_m & a_m^2 & \cdots & a_m^n \\
+  \end{pmatrix}
+$$
+
+<span style="display:block;text-align:right;color:orangered;">橙色居右</span>
+<span style="display:block;text-align:center;color:gray;">灰色居中</span>
+
+[TOC]
+
+Markdown Nice 这么好用，简直是{喜大普奔|hē hē hē hē}呀！
+
+* 歌词经理 [wechat-fromat](https://github.com/lyricat/wechat-format "灵感来源")
+* 颜家大少 [MD2All](http://md.aclickall.com/ "MdA2All")
+
+去露营了！ :tent: 很快回来。
+
+真好笑！ :joy:
+:joy:
+:joy:
+:joy:
+:joy:
