面试题更新

--- a/06开源框架/1.组件化.md
+++ b/06开源框架/1.组件化.md
@@ -30,7 +30,11 @@
     Butterknife
     DataBinding
 
-### 开源库ARouter
+注解处理器 == 根据注解生成我们的代码
 
+### 开源库ARouter
+EventBus == 传统的方式一行一行的生成
+
+alibaba/ARouter = JavaPoet来生成的
 
 
