更新面试题

--- a/面经/面试题.md
+++ b/面经/面试题.md
@@ -1,6 +1,6 @@
 面试题总结
 
-# 1.公司一
+# 1.河北乾石科技有限公司
 
 Handler looper message  messageQueue  的关系
 
@@ -12,7 +12,7 @@ Handler looper message  messageQueue  的关系
 
 Kt的扩展方法是什么怎么实现
 
-Kt的lamda表达式
+Kt的高阶函数是什么
 
 讲讲内存优化都做过什么
 
@@ -33,3 +33,104 @@ Activity和fragment怎么通信
 开发工时怎么确定的
 
 怎么实现捕捉全局异常崩溃信息并上报
+
+
+
+
+# 2.橙光 北京六趣网络科技有限公司
+
+自我介绍
+
+崩溃率降低千分之二，崩溃信息怎么统计的
+
+怎么解决的线上anr，崩溃问题
+
+app上架Google play需要满足什么要求
+
+安卓10 11 怎么适配
+
+安卓11 对于文件读写和路径的权限有什么变化
+
+apk包体积优化怎么做
+
+切换主题和皮肤怎么实现的
+
+切换主题时activity的重启是怎么解决的
+
+jetpack用过哪些库
+
+viewModel生命周期
+
+viewModel存在activity的什么地方
+
+MVVM里model层数据与view生命周期的关系
+
+kt相比于java的优势和缺点
+
+kt调用java需要注意什么
+
+kt的协程如何实现三个方法并发执行，并等待三个结果统一返回
+
+协程async返回的是job还是Deferred
+
+job和Deferred区别
+
+协程的withContext是什么
+
+CoroutineContext是什么
+
+
+
+
+# 3.简正谦诚
+
+
+主管
+
+面向对象三大特征
+
+讲讲什么是继承
+
+什么是多线程
+
+会不会flutter
+
+Mvc架构与mvvm架构区别
+
+如何解决线上的崩溃和ANR问题
+
+讲一讲最近做的一个项目
+
+App数据备份恢复是怎么实现的
+
+讲一讲activity的四大特征
+
+
+技术
+
+讲一讲对Handler的了解
+
+Kt和java的区别
+
+进程线程协程的区别
+
+之前都开发过什么架构的app
+
+讲一下对mvvm架构的了解
+
+了解哪些设计模式
+
+安卓的持久化技术都有什么
+
+如何实现自定义view
+
+onDraw方法里可以初始化画笔等对象吗
+
+Activiry生命周期
+
+IM项目用的什么技术开发的
+
+
+
+
+
